Implement Search activity

--- a/App24/app/src/main/AndroidManifest.xml
+++ b/App24/app/src/main/AndroidManifest.xml
@@ -54,6 +54,9 @@
             android:name=".activities.VideoActivity"
             android:screenOrientation="portrait"></activity>
         <activity
+            android:name=".activities.ProfileActivity"
+            android:screenOrientation="portrait"></activity>
+        <activity
             android:name="com.facebook.FacebookActivity"
             android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
             android:label="@string/app_name"
