--- a/App24/app/build.gradle
+++ b/App24/app/build.gradle
@@ -21,11 +21,15 @@ repositories {
     mavenCentral()
 }
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile files('libs/PayPalAndroidSDK-2.11.2.jar')
+    compile files('libs/PayPalAndroidSDK.jar')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:21.0.0'
     compile 'com.android.support:recyclerview-v7:+'
     compile 'com.facebook.android:facebook-android-sdk:4.1.0'
     compile 'com.ogaclejapan.arclayout:library:1.0.1@aar'
     compile 'cn.pedant.sweetalert:library:1.3'
+    compile 'com.google.android.gms:play-services-ads:8.3.0'
+    compile files('libs/PayPalAndroidSDK.jar')
 }
