--- a/App24/app/src/main/AndroidManifest.xml
+++ b/App24/app/src/main/AndroidManifest.xml
@@ -21,7 +21,8 @@
         tool:replace="android:icon">
         <activity
             android:name=".activities.SplashActivity"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -72,8 +73,11 @@
             android:theme="@style/Theme.Facebook.Like"
             />
 
-        <receiver
-            android:name=".receiver.AlarmReceiver">
+        <receiver android:name=".receiver.AlarmReceiver"
+                  android:enabled="false">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED"></action>
+            </intent-filter>
         </receiver>
         <!--Paypal Classes-->
 
