--- a/App24/app/build.gradle
+++ b/App24/app/build.gradle
@@ -9,6 +9,8 @@ android {
         minSdkVersion 16
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
+
     }
     buildTypes {
         release {
@@ -23,6 +25,7 @@ repositories {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile files('libs/PayPalAndroidSDK-2.11.2.jar')
+    compile files('libs/crittercism_v5_4_0_sdkonly.jar')
     compile files('libs/PayPalAndroidSDK.jar')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:recyclerview-v7:+'
@@ -33,4 +36,11 @@ dependencies {
     compile 'com.google.android.gms:play-services-ads:8.3.0'
     compile files('libs/PayPalAndroidSDK.jar')
     compile 'com.shamanland:facebook-like-button:0.1.8'
+    compile 'com.crittercism:crittercism-android-agent:5.4.0'
+
+    //Retrofit dependencies
+    compile 'com.squareup.retrofit:retrofit:1.6.1'
+    compile 'com.google.code.gson:gson:2.3'
+    compile 'org.parceler:parceler:0.2.13'
+
 }
