--- a/App24/app/build.gradle
+++ b/App24/app/build.gradle
@@ -2,14 +2,15 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 21
-    buildToolsVersion "21.0.1"
+    buildToolsVersion "21.0.0"
 
     defaultConfig {
         applicationId "com.capstone.app24"
-        minSdkVersion 16
+        multiDexEnabled true
+        minSdkVersion 17
+        targetSdkVersion 19
         versionCode 1
         versionName "1.0"
-        multiDexEnabled true
 
     }
     buildTypes {
@@ -29,14 +30,16 @@ dependencies {
     compile files('libs/PayPalAndroidSDK.jar')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:recyclerview-v7:+'
-    compile 'com.android.support:appcompat-v7:22.2.0'
+    compile 'com.android.support:appcompat-v7:21.0.0'
     compile 'com.facebook.android:facebook-android-sdk:4.1.0'
+//    compile 'com.facebook.android:facebook-android-sdk:4.5.0'
     compile 'com.ogaclejapan.arclayout:library:1.0.1@aar'
     compile 'cn.pedant.sweetalert:library:1.3'
     compile 'com.google.android.gms:play-services-ads:8.3.0'
-    compile files('libs/PayPalAndroidSDK.jar')
-    compile 'com.shamanland:facebook-like-button:0.1.8'
     compile 'com.crittercism:crittercism-android-agent:5.4.0'
+    compile 'com.sromku:simple-fb:4.1.1'
+    //Glide Library
+    compile 'jp.wasabeef:glide-transformations:1.3.1'
 
     //Retrofit dependencies
     compile 'com.squareup.retrofit:retrofit:1.6.1'
