Integrate seen web Service

--- a/App24/app/src/main/AndroidManifest.xml
+++ b/App24/app/src/main/AndroidManifest.xml
@@ -71,6 +71,9 @@
         <activity
             android:name=".activities.PaypalActivity"
             android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".activities.EditPostActivity"
+            android:screenOrientation="portrait"></activity>
 
         <receiver android:name=".receiver.AlarmReceiver"
                   android:enabled="false">
