--- a/App24/app/src/main/AndroidManifest.xml
+++ b/App24/app/src/main/AndroidManifest.xml
@@ -92,14 +92,14 @@
             android:configChanges="keyboardHidden|orientation"/>
         <activity android:name="io.card.payment.DataEntryActivity"/>
 
-        <activity
-            android:name="com.facebook.FacebookActivity"
-            android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
-            android:screenOrientation="portrait"/>
+        <activity android:name="com.facebook.FacebookActivity"
+                  android:configChanges=
+                      "keyboard|keyboardHidden|screenLayout|screenSize|orientation"
+                  android:label="@string/app_name"
+                  android:theme="@android:style/Theme.Translucent.NoTitleBar"/>
         <provider android:name="com.facebook.FacebookContentProvider"
                   android:authorities="com.facebook.app.FacebookContentProvider1673090976236867"
                   android:exported="true"/>
-
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/app_id"/>
