--- a/App24/app/src/main/AndroidManifest.xml
+++ b/App24/app/src/main/AndroidManifest.xml
@@ -11,6 +11,8 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
     <uses-permission
         android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission
+        android:name="android.permission.INTERACT_ACROSS_USERS_FULL"/>
     <application
         android:name=".utils.AppController"
         android:allowBackup="true"
@@ -97,9 +99,14 @@
                       "keyboard|keyboardHidden|screenLayout|screenSize|orientation"
                   android:label="@string/app_name"
                   android:theme="@android:style/Theme.Translucent.NoTitleBar"/>
+        <!--Clients share facebook provider-->
         <provider android:name="com.facebook.FacebookContentProvider"
-                  android:authorities="com.facebook.app.FacebookContentProvider1673090976236867"
+                  android:authorities="com.facebook.app.FacebookContentProvider1626774610922182"
                   android:exported="true"/>
+
+        <!--<provider android:name="com.facebook.FacebookContentProvider"-->
+        <!--android:authorities="com.facebook.app.FacebookContentProvider1673090976236867"-->
+        <!--android:exported="true"/>-->
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/app_id"/>
