--- a/App24/app/build.gradle
+++ b/App24/app/build.gradle
@@ -25,9 +25,7 @@ repositories {
 }
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile files('libs/PayPalAndroidSDK-2.11.2.jar')
     compile files('libs/crittercism_v5_4_0_sdkonly.jar')
-    compile files('libs/PayPalAndroidSDK.jar')
     compile files('libs/commons-lang-2.5.jar')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:recyclerview-v7:+'
@@ -36,13 +34,10 @@ dependencies {
     compile 'com.facebook.android:facebook-android-sdk:4.6.0'
     compile 'cn.pedant.sweetalert:library:1.3'
     compile 'com.google.android.gms:play-services-ads:8.3.0'
-    compile 'com.crittercism:crittercism-android-agent:5.4.0'
-    compile 'com.sromku:simple-fb:4.1.1'
-    //Glide Library
     compile 'jp.wasabeef:glide-transformations:1.3.1'
-    //Retrofit dependencies
-    compile 'com.squareup.retrofit:retrofit:1.6.1'
     compile 'com.google.code.gson:gson:2.3'
     compile 'org.parceler:parceler:0.2.13'
+    compile 'com.github.yasevich:endless-recycler-view:1.0'
+
 
 }
